deploy/k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: trading-wizard-gateway
  namespace: trading-wizard
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - trading.kalee-dc.click
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - trading.kalee-dc.click
      tls:
        mode: SIMPLE
        credentialName: trading-wizard-tls
